June 3 Exercices(JSON Parsing)